# PPO_labs

lab_2/: Makefile  db  pom.xml
lab_2/src/main/java/ru/glezdenev/sd/lab_2/dao_mongo/: CurrencyDAO.java  GoodsDAO.java  UserDAO.java  rxMongo.java
lab_2/src/main/java/ru/glezdenev/sd/lab_2/objects/: Currecy.java  Good.java  User.java
lab_2/src/main/java/ru/glezdenev/sd/lab_2/server/: GoodHandler.java  OtherHandler.java  UserHandler.java  rxServer.java
lab_2/test/: curl_wrap.cpp  curl_wrap.h  test.cpp
lab_3/: CMakeLists.txt  README.md  init.db  main.cpp
lab_3/dao/: postgres.cpp  postgres.h
lab_3/processing/: processing.h
lab_3/server/: https_server.cpp  https_server.h  https_server_impl.h  uri_parser.cpp  uri_parser.h
lab_3/test/: common_test.cpp  common_test.h  test.cpp  test_data.h  test_processing.h  test_uri_parser.h  test_with_stub_dao.h
lab_3/utils/: data.cpp  data.h  time_convert.cpp  time_convert.h
